force-app/main/default/objects/SIOC__IAV_Interaction__c/SIOC__IAV_Interaction__c.object-meta.xml
<CustomObject>
    <description>The IAV Interaction object stores and persists details whenever there is an interaction with the instant account verification integration.</description>
    <label>IAV Interaction</label>
    <nameField>
        <displayFormat>IAVI-{00000000}</displayFormat>
        <label>IAV Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IAV Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>