force-app/main/default/objects/SIOC__IAV_Interaction__c/fields/SIOC__Action__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Action__c</fullName>
    <description>The system automatically populates this text field with the interaction that occurs when the record is created.</description>
    <inlineHelpText>The system-populated field displays the interaction action.</inlineHelpText>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>