force-app/main/default/objects/SIOC__IAV_Interaction__c/fields/SIOC__Financial_Account_Customer__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Financial_Account_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this text lookup field with the Id of the Financial Account Customer record.</description>
    <inlineHelpText>The system-populated field automatically displays the Id of the Financial Account Customer record.</inlineHelpText>
    <label>Financial Account Customer</label>
    <referenceTo>SIOC__Financial_Account_Customer__c</referenceTo>
    <relationshipLabel>IAV Interactions</relationshipLabel>
    <relationshipName>IAV_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>