force-app/main/default/objects/SIOC__IAV_Interaction__c/fields/SIOC__Vendor_Provider__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Vendor_Provider__c</fullName>
    <description>The system automatically populates this text field with the fully qualified vendor provider class name used for IAV Interaction record creation.</description>
    <inlineHelpText>The system-populated field displays the fully qualified vendor provider class name.</inlineHelpText>
    <label>Vendor Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>